Nice Version, with reloads working.

--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -13,7 +13,7 @@
     <applicationSettings>
         <ManageWalla.Properties.Settings>
             <setting name="WallaWSPort" serializeAs="String">
-                <value>8082</value>
+                <value>8081</value>
             </setting>
             <setting name="WallaWSPath" serializeAs="String">
                 <value>/wallahub/v1/ws/</value>
@@ -43,7 +43,7 @@
                 <value>www.ask.com</value>
             </setting>
             <setting name="WallaWSHostname" serializeAs="String">
-                <value>localhost</value>
+                <value>85.13.193.30</value>
             </setting>
           <!-- 85.13.193.30 -->
         </ManageWalla.Properties.Settings>
@@ -52,7 +52,7 @@
   <log4net>
 
     <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
-      <target value="Console.Error" />
+      <!--<target value="Console.Info" /> -->
       <mapping>
         <level value="FATAL" />
         <foreColor value="Red" />
@@ -94,7 +94,7 @@
     </appender>
 
     <root>
-      <level value="DEBUG" />
+      <level value="INFO" />
       <appender-ref ref="ColoredConsoleAppender" />
       <appender-ref ref="RollingFileAppender" />
     </root>
