--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -13,7 +13,7 @@
     <applicationSettings>
         <ManageWalla.Properties.Settings>
             <setting name="WallaWSPort" serializeAs="String">
-                <value>8081</value>
+                <value>8082</value>
             </setting>
             <setting name="WallaWSPath" serializeAs="String">
                 <value>/wallahub/v1/ws/</value>
@@ -43,7 +43,7 @@
                 <value>www.ask.com</value>
             </setting>
             <setting name="WallaWSHostname" serializeAs="String">
-                <value>85.13.193.30</value>
+                <value>localhost</value>
             </setting>
           <!-- 85.13.193.30 -->
         </ManageWalla.Properties.Settings>
