--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -13,7 +13,7 @@
     <applicationSettings>
         <ManageWalla.Properties.Settings>
             <setting name="WallaWSPort" serializeAs="String">
-                <value>8081</value>
+                <value>8082</value>
             </setting>
             <setting name="WallaWSPath" serializeAs="String">
                 <value>/wallahub/v1/ws/</value>
@@ -21,31 +21,30 @@
             <setting name="WallaWebPath" serializeAs="String">
                 <value>/wallahub/v1/web/</value>
             </setting>
-            <setting name="GlobalStateCacheFileName" serializeAs="String">
-                <value>Walla-LocalGlobalState.db</value>
-            </setting>
             <setting name="WallaAppKey" serializeAs="String">
-                <value>1234567890</value>
-            </setting>
-            <setting name="ThumbCacheFileName" serializeAs="String">
-                <value>Walla-LocalThumbCache.db</value>
-            </setting>
-            <setting name="MainCopyCacheFileName" serializeAs="String">
-                <value>Walla-LocalMainCopyCache.db</value>
-            </setting>
-            <setting name="UploadImageStateFileName" serializeAs="String">
-                <value>Walla-LocalUploadImageStateCache.db</value>
+                <value>12345678901234567890123456789012</value>
             </setting>
             <setting name="OS" serializeAs="String">
                 <value>Windows</value>
+            </setting>
+            <setting name="GlobalStateCacheFileName" serializeAs="String">
+                <value>WallaState.db</value>
+            </setting>
+            <setting name="ThumbCacheFileName" serializeAs="String">
+                <value>WallaThumbs.db</value>
+            </setting>
+            <setting name="MainCopyCacheFileName" serializeAs="String">
+                <value>WallaMainCopy.db</value>
+            </setting>
+            <setting name="UploadImageStateFileName" serializeAs="String">
+                <value>WallaUploads.db</value>
             </setting>
             <setting name="WebServerTest" serializeAs="String">
                 <value>www.ask.com</value>
             </setting>
             <setting name="WallaWSHostname" serializeAs="String">
-                <value>85.13.193.30</value>
+                <value>localhost</value>
             </setting>
-          <!-- 85.13.193.30 -->
         </ManageWalla.Properties.Settings>
     </applicationSettings>
 
